[package]
name = "conceal"
version = "0.5.3"
authors = ["Collide <three-dim-sky@foxmail.com>"]
edition = "2021"
description = "Command line recycle bin"
documentation = "https://github.com/TD-Sky/conceal"
repository = "https://github.com/TD-Sky/conceal"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["trash", "remove", "recycle", "freedesktop"]
license = "MIT"
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "LICENSE*", "README.md"]

[workspace.dependencies]
clap = "4.5"
clap_complete = "4.5"
clap_complete_nushell = "4.5"
dirs = "5.0"
owo-colors = "4.0"
thiserror = "1"
trash = "5.0"
chrono = "0.4"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
dirs = { workspace = true }
owo-colors = { workspace = true }
thiserror = { workspace = true }
trash = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = { workspace = true }
clap_complete_nushell = { workspace = true }

[profile.release]
lto = true
