[package]
name = "conceal"
version = "0.7.0"
edition = "2024"
description = "Command line recycle bin"
documentation = "https://github.com/TD-Sky/conceal"
repository = "https://github.com/TD-Sky/conceal"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["trash", "remove", "recycle", "freedesktop"]
license = "MIT"
include = [
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "build.rs",
]

[workspace.dependencies]
clap = "4.5"
clap_complete = "4.5"
clap_complete_nushell = "4.5"
dirs = "6.0"
owo-colors = "4.0"
thiserror = "2"
trash = "5.2"
cfg_aliases = "0.2"
jiff = "0.2"
parse_datetime = "0.14"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
dirs = { workspace = true }
owo-colors = { workspace = true }
thiserror = { workspace = true }
trash = { workspace = true }
jiff = { workspace = true }
parse_datetime = { workspace = true }

[build-dependencies]
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = { workspace = true }
clap_complete_nushell = { workspace = true }
cfg_aliases = { workspace = true }

[profile.release]
lto = true
